# Mirrorcchi

practice_of_information_systems_1-main/: README.md
practice_of_information_systems_1-main/group7/: Dockerfile  docker-compose.yaml  pyproject.toml
practice_of_information_systems_1-main/group7/api/: db.py  main.py  migrate_db.py
practice_of_information_systems_1-main/group7/api/cruds/: history.py  user.py
practice_of_information_systems_1-main/group7/api/models/: history.py  user.py
practice_of_information_systems_1-main/group7/api/routers/: history.py  user.py
practice_of_information_systems_1-main/group7/api/schemas/: history.py  user.py
practice_of_information_systems_1-main/group7/api/utils/: health_logic.py
